--- a/app/src/main/res/layout/activity_game_mode_one.xml
+++ b/app/src/main/res/layout/activity_game_mode_one.xml
@@ -5,41 +5,86 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#fff"
+    android:padding="16dp"
     tools:context=".GameModeOne">
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:indeterminate="false"
+        android:max="200"
+        android:progress="200" />
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/progressBar"
+        android:layout_marginTop="5dp"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/tv_record"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Record: "
+            android:textColor="#000"
+            android:textSize="20sp" />
+
+        <TextView
+            android:id="@+id/record"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="0"
+            android:textColor="#000"
+            android:textSize="20sp" />
+
+    </LinearLayout>
 
     <TextView
         android:id="@+id/colorName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        tools:text="@string/negro"
-        tools:textColor="@color/azul"
-        android:layout_centerHorizontal="true"
         android:layout_above="@id/linear_layout"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="20dp"
         android:textSize="50sp"
-        android:layout_marginBottom="20dp"/>
+        tools:text="@string/negro"
+        tools:textColor="@color/azul" />
 
     <LinearLayout
         android:id="@+id/linear_layout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_centerInParent="true">
+        android:layout_centerInParent="true"
+        android:orientation="horizontal">
 
         <at.markushi.ui.CircleButton
             android:id="@+id/true_button"
-            android:layout_width="150dp"
-            android:layout_height="150dp"
+            android:layout_width="160dp"
+            android:layout_height="160dp"
             app:cb_color="@color/negro"
-            app:cb_pressedRingWidth="25dp"/>
+            app:cb_pressedRingWidth="30dp" />
 
         <at.markushi.ui.CircleButton
             android:id="@+id/false_button"
-            android:layout_width="150dp"
-            android:layout_height="150dp"
+            android:layout_width="160dp"
+            android:layout_height="160dp"
             app:cb_color="@color/azul"
-            app:cb_pressedRingWidth="25dp"/>
+            app:cb_pressedRingWidth="30dp" />
 
     </LinearLayout>
+
+    <TextView
+        android:id="@+id/score"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/linear_layout"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="30dp"
+        android:text="0"
+        android:textSize="60sp" />
 
 
 </RelativeLayout>
